Moved alumni to new page

--- a/team.html
+++ b/team.html
@@ -27,6 +27,7 @@
           <li><a href="index.html#about_us">About Us</a></li>
           <li><a href="index.html#our_work">Our Work</a></li>
           <li><a href="team.html" class="active">Team</a></li>
+          <li><a href="alumni.html">Alumni</a></li>
           <li><a href="vedanthcs.html" >Vedanth</a></li>
           <li><a href="project_gallery.html">Projects </a></li>
           <li><a href="index.html#contact">Contact Us</a></li>
@@ -56,11 +57,11 @@
 <!-- START BOARD 2023 -->
 <section class="board">
   <div class="title textcenter">
-    <h1>Board 2023</h1>
+    <h1>Board</h1>
   </div>
         <div class="member">
           <div class="member_img">
-              <img src="images/team/2022-23/chaitanya.png">
+              <img src="images/team/2022-23/chaitanya.png"  style="object-fit: cover;">
               <div class="social_media">
               <a href=""><i class="fa fa-linkedin"></i></a>
               </div>
@@ -84,7 +85,7 @@
 <section class="board">
         <div class="member">
           <div class="member_img">
-              <img src="images/team/2022-23/disha.jpg">
+              <img src="images/team/2022-23/disha.jpg" style="object-fit: cover;">
               <div class="social_media">
               <a href="https://www.linkedin.com/in/disha-ag-1b71651b1"><i class="fa fa-linkedin"></i></a>
             </div>
@@ -95,7 +96,7 @@
 
         <div class="member">
           <div class="member_img">
-              <img src="images/team/2022-23/ayush.png">
+              <img src="images/team/2022-23/ayush.png" style="object-fit: cover;">
               <div class="social_media">
               <a href="https://www.linkedin.com/in/ayush-sarkar-851946227"><i class="fa fa-linkedin"></i></a>
             </div>
@@ -106,7 +107,7 @@
 
         <div class="member">
           <div class="member_img">
-              <img src="images/team/2022-23/ahona.png">
+              <img src="images/team/2022-23/ahona.png" style="object-fit: cover;">
               <div class="social_media">
               <a href="https://www.linkedin.com/in/ahona-rakshit-a9340b252"><i class="fa fa-linkedin"></i></a>
             </div>
@@ -128,8 +129,6 @@
 </section>
 <!-- END BOARD 2023-->
 
-
-
 <section class="others">
  <div class="title textcenter">
    <h1>Team Members</h1>
@@ -148,11 +147,17 @@
        <h5>Coding & Simulation</h5>
        <ul>
             <li>Yashika Goyal</li>
-            <li>Priyasu Karak</li>
             <li>Jason Dmello</li>
-            <li>Siya Kothari</li>
             <li>Nilay Nishant</li>
-            <li>Ritish Jindal</li>
+            <li>Priyasu Karak</li>
+            <li>Punith</li>
+            <li>Ananya Das</li>
+            <li>Soham Ghodke</li>
+            <li>Anirudh Agrawal</li>
+            <li>Aman Agarwal</li>
+            <li>Aditya Wadgaonkar</li>
+            <li>Rishabh Singh</li>
+            <li>Gnana Sai</li>
        </ul>
       </div>
 
@@ -164,6 +169,7 @@
             <li>Purbasha Rauth</li>
             <li>Kashin Mittal</li>
             <li>Poonguzhali Sivakumar</li>
+            <li>Urvi Todi</li>
        </ul>
       </div>
 
@@ -171,7 +177,6 @@
        <h5>Mechanical</h5>
        <ul>
             <li>Somya Nalwaya</li>
-            <li>Shreyans Goyal</li>
        </ul>
       </div>
 
@@ -186,451 +191,6 @@
  </div>
 
 </section>
-
-
-
-
-<!-- OLD BOARD -->
-
-<!-- START BOARD 2021-->
-<section class="board">
-  <div class="title textcenter">
-    <h1>Board 2022</h1>
-  </div>
-        <div class="member">
-          <div class="member_img">
-             <img src="images/team/2021-22/Sairaj.jpg">
-              <div class="social_media">
-              <a href="https://www.linkedin.com/in/sairaj-nayak/"><i class="fa fa-linkedin"></i></a>
-            </div>
-          </div>
-          <h3>Sairaj Nayak</h3>
-          <h5>Team Leader</h5>
-        </div>
-
-        <div class="member">
-          <div class="member_img">
-             <img src="images/team/2021-22/Rishabh.jpeg">
-              <div class="social_media">
-              <a href="https://www.linkedin.com/in/rishabh-dugar-086a74194/"><i class="fa fa-linkedin"></i></a>
-            </div>
-          </div>
-          <h3>Rishabh Dugar</h3>
-          <h5>Project Manager</h5>
-        </div>
-</section>
-
-<section class="board">
-        <div class="member">
-          <div class="member_img">
-             <img src="images/team/2021-22/YashRaj.jpg">
-              <div class="social_media">
-              <a href="https://www.linkedin.com/in/yash-raj-54a6b31b7/"><i class="fa fa-linkedin"></i></a>
-            </div>
-          </div>
-          <h3>Yash Raj</h3>
-          <h5>Coding Head</h5>
-        </div>
-
-        <div class="member">
-          <div class="member_img">
-             <img src="images/team/2021-22/Hrithik.jpeg">
-              <div class="social_media">
-              <a href="https://www.linkedin.com/in/hrithik-p-shetty-1530a4190/"><i class="fa fa-linkedin"></i></a>
-            </div>
-          </div>
-          <h3>Hrithik Shetty</h3>
-          <h5>Mechanical Head</h5>
-        </div>
-
-        <div class="member">
-          <div class="member_img">
-             <img src="images/team/2021-22/Ratnesh.jpeg">
-              <div class="social_media">
-              <a href="https://www.linkedin.com/in/ratnesh-yadav-26022a16a/"><i class="fa fa-linkedin"></i></a>
-            </div>
-          </div>
-          <h3>Ratnesh Yadav</h3>
-          <h5>Electronics and Simulations Head</h5>
-        </div>
-   </section>
-<!-- END BOARD 2022-->
-
-<!-- TEAM MEMBERS 2022-->
-<!-- 
-<section class="others">
- <div class="title textcenter">
-   <h1>Team Members</h1>
-  </div>
-  <div class="row">
-    <div class="teamcontent">
-      <div class="domains" >
-        <h5>Senior Team Members</h5>
-         <ul>
-           <li>Abhishek Srinivas Rao</li>
-           <li>Anirudh Bharadwaj</li>
-           <li>Goutham T S</li>
-         </ul>
-    </div>
-
-    <div class="domains" >
-       <h5>Coding</h5>
-       <ul>
-            <li>B L Siddhartha Bhat</li>
-            <li>suyog chougule</li>
-            <li>Priyasu Karak</li>
-            <li>Kushagra Makkar</li>
-            <li>Disha Agarwal</li>
-            <li>Kishika Singh</li>
-            <li>Yashika Goyal</li>
-            <li>Priyasu Karak</li>
-            <li>Jason Dmello</li>
-       </ul>
-      </div>
-
-      <div class="domains" >  
-       <h5>Electronics & Simulation</h5>
-       <ul>
-            <li>Dev S  Sakaria</li>
-            <li>Harsh Sancheti</li>
-            <li>Yash Agrawal</li>
-            <li>Ahona Rakshit</li>
-            <li>Harshitha Ashok</li>
-            <li>Avyaktha Thantry</li>
-            <li>Purbasha Rauth</li>
-       </ul>
-      </div>
-
-      <div class="domains">
-       <h5>Mechanical</h5>
-       <ul>
-            <li>Suryansh Sunil</li>
-            <li>R. Chaitanya Sai Nikith</li>
-            <li>Somya Nalwaya</li>
-            <li>Ayush Sarkar</li>
-       </ul>
-      </div>
-
-      <div class="domains">
-       <h5>Management</h5>
-       <ul>
-            <li>Jason Pereira</li>
-          </ul>
-        </div>
-  
-     </div>
-   </div>
-  
-  </section>
--->
-
-
-
-<!--start Board 2021-->
-<section class="board">
-  <div class="title textcenter">
-    <h1>Board 2021</h1>
-  </div>
-        <div class="member">
-          <div class="member_img">
-             <img src="images/team/2020-21/ps.jpeg">
-              <div class="social_media">
-              <a href="https://www.linkedin.com/in/parth-sirohi-908933169/"><i class="fa fa-linkedin"></i></a>
-            </div>
-          </div>
-          <h3>Parth Sirohi</h3>
-          <h5>Chairperson</h5>
-        </div>
-
-        <div class="member">
-           <div class="member_img">
-            <img src="images/team/2020-21/na.jpeg">
-              <div class="social_media">
-              <a href="https://www.linkedin.com/in/nihaarika-agarwal-243ab91ba"><i class="fa fa-linkedin"></i></a>
-            </div>
-          </div>
-          <h3>Nihaarika Agarwal</h3>
-          <h5>Vice Chairperson</h5>
-      </div>
-
-        <div class="member">
-            <div class="member_img">
-              <img src="images/team/2020-21/sd.jpeg">
-              <div class="social_media">
-              <a href="https://www.linkedin.com/in/shreyas-daga-9214b219b/"><i class="fa fa-linkedin"></i></a>
-            </div>
-          </div>
-          <h3>Shreyas Daga</h3>
-          <h5>Project Manager</h5>
-      </div>
-
-        <div class="member">
-           <div class="member_img">
-            <img src="images/team/2020-21/sa1.jpeg">
-              <div class="social_media">
-              <a href="https://www.linkedin.com/in/saloni-agarwal-7aa5821a7/"><i class="fa fa-linkedin"></i></a>
-            </div>
-          </div>
-          <h3>Saloni Agarwal</h3>
-          <h5>Operations Manager</h5>
-      </div>
-
-        <div class="member">
-          <div class="member_img">
-            <img src="images/team/2020-21/nt.jpeg">
-              <div class="social_media">
-              <a href="https://www.linkedin.com/in/neil-tyrone-pereira-025a751b3/"><i class="fa fa-linkedin"></i></a>
-            </div>
-          </div>
-          <h3>Neil Tyrone</h3>
-          <h5>Electronics Head</h5>
-        </div>
-
-        <div class="member">
-          <div class="member_img">
-            <img src="images/team/2020-21/codinghead.jpg">
-             <div class="social_media">
-              <a href="https://www.linkedin.com/in/rushil-jhaveri-218a6016a/"><i class="fa fa-linkedin"></i></a>
-            </div>
-          </div>
-          <h3>Rushil Jhaveri</h3>
-          <h5>Coding Head</h5>
-        </div>
-
-        <div class="member">
-           <div class="member_img">
-            <img src="images/team/2020-21/ba1.jpeg">
-              <div class="social_media">
-              <a href="https://www.linkedin.com/company/robotics-and-circuits"><i class="fa fa-linkedin"></i></a>
-            </div>
-          </div>
-          <h3>Bhaavin Jogeshwar</h3>
-          <h5>Mechanical Head</h5>
-      </div>
-
-        <div class="member">
-           <div class="member_img">
-            <img src="images/team/2020-21/ap.jpeg">
-              <div class="social_media">
-              <a href="https://www.linkedin.com/in/anant-pandey-4b73191b2/"><i class="fa fa-linkedin"></i></a>
-            </div>
-          </div>
-          <h3>Anant Pandey</h3>
-          <h5>Simulation Head</h5>
-      </div>
-
-        <div class="member">
-           <div class="member_img">
-            <img src="images/team/2020-21/ag.jpeg">
-              <div class="social_media">
-              <a href="https://www.linkedin.com/in/ashwin-gopalakrishnan-31498318b/"><i class="fa fa-linkedin"></i></a>
-            </div>
-          </div>
-           <h3>Ashwin G</h3>
-          <h5>Management Head</h5>
-      </div>
-   </section>
-
-<!-- End Board-->
-
-<!--
-<section class="others">
-  <div class="title textcenter">
-    <h1>Team Members</h1>
-   </div>
-   <div class="row">
-     <div class="teamcontent">
-       <div class="domains" >
-          <div class="icon">
-            <i class="fa fa-code" aria-hidden="true"></i>
-          </div>
-          <h5>Coding</h5>
-          <ul>
-            <li>Aravind Variyath</li>
-            <li>Yash Raj</li>
-            <li>Shailabh</li>
-            <li>Aditya Prabhu</li>
-            <li>Subhash Raja</li>
-          </ul>
-       </div>
-       <div class="domains" >
-          <div class="icon">
-            <i class="fa fa-microchip" aria-hidden="true"></i>
-          </div>
-          <h5>Electronics</h5>
-          <ul>
-            <li>Anusha GV</li>
-            <li>Niket Jain</li>
-            <li>Vishwajeet Kulkarni</li>
-            <li>Sakshi Goenka</li>
-            <li>Anirudh Bharadwaj</li>
-            <li>Abhishek Srinivas Rao</li>
-            <li>Yadav Ratnesh Ravikiran</li>
-            <li>Asher Antony Pinto </li>
-            <li> Jai Chhaya</li>
-
-          </ul>
-       </div>
-       <div class="domains" >
-          <div class="icon">
-            <i class="fa fa-wrench" aria-hidden="true"></i>
-          </div>
-          <h5>Mechanical</h5>
-          <ul>
-            <li>Rishabh Dugar</li>
-            <li>Rohan Kumar</li>
-            <li>Hrithik P. Shetty </li>
-            <li>Sairaj Nayak </li>
-          </ul>
-       </div>
-         <div class="domains" >
-          <div class="icon">
-            <i class="fa fa-bar-chart" aria-hidden="true"></i>
-          </div>
-          <h5>Management</h5>
-          <ul>
-            <li>Arihant Jha</li>
-            <li>Guru Prakash</li>
-            <li>Kashish Miglani</li>
-            <li>Nishant Gupta</li>
-            <li>Goutham T S</li>
-          </ul>
-       </div>
-
-     </div>
-    </div>
-
-</section>
- -->
-
-
- <!--start Board-->
- <section class="board">
-   <div class="title textcenter">
-     <h1>Board 2020</h1>
-   </div>
-         <div class="member">
-           <div class="member_img">
-              <img src="images/team/2019-20/member1.jpeg">
-               <div class="social_media">
-               <a href="https://www.linkedin.com/in/titiksha-wagh"><i class="fa fa-linkedin"></i></a>
-             </div>
-           </div>
-           <h3>Titiksha Wagh</h3>
-           <h5>Chairperson</h5>
-         </div>
-
-         <div class="member">
-            <div class="member_img">
-              <img src="images/team/2019-20/member2.jpeg">
-               <div class="social_media">
-               <a href="https://www.linkedin.com/in/khushal-kapoor-646171181/"><i class="fa fa-linkedin"></i></a>
-             </div>
-           </div>
-           <h3>Khushal Kapoor</h3>
-           <h5>Team Manager</h5>
-       </div>
-
-         <div class="member">
-             <div class="member_img">
-              <img src="images/team/2019-20/member3.jpg">
-               <div class="social_media">
-               <a href="https://www.linkedin.com/in/kartikeya-pandey-b5b9b3181/"><i class="fa fa-linkedin"></i></a>
-             </div>
-           </div>
-           <h3>Kartikeya Pandey</h3>
-           <h5>General Secretary</h5>
-       </div>
-
-         <div class="member">
-            <div class="member_img">
-              <img src="images/team/2019-20/member4.jpg">
-               <div class="social_media">
-               <a href="https://www.linkedin.com/in/grissel-mathias-203391158/"><i class="fa fa-linkedin"></i></a>
-             </div>
-           </div>
-           <h3>Grissel Mathias</h3>
-           <h5>Treasurer</h5>
-       </div>
-
-         <div class="member">
-           <div class="member_img">
-              <img src="images/team/2019-20/member5.jpg">
-               <div class="social_media">
-               <a href="https://www.linkedin.com/in/saransh-agrawal8899/"><i class="fa fa-linkedin"></i></a>
-             </div>
-           </div>
-           <h3>Saransh Agarwal</h3>
-           <h5>Electronics Head</h5>
-         </div>
-
-         <div class="member">
-           <div class="member_img">
-             <img src="images/team/2019-20/member6.jpg">
-              <div class="social_media">
-               <a href="https://www.linkedin.com/in/raloue/"><i class="fa fa-linkedin"></i></a>
-             </div>
-           </div>
-           <h3>Raloue Kapoor</h3>
-           <h5>Coding Head</h5>
-         </div>
-
-         <div class="member">
-            <div class="member_img">
-              <img src="images/team/2019-20/member7.jpg">
-               <div class="social_media">
-               <a href="https://www.linkedin.com/company/robotics-and-circuits"><i class="fa fa-linkedin"></i></a>
-             </div>
-           </div>
-           <h3>Eeshan Chowdhary</h3>
-           <h5>Mechanical Head</h5>
-       </div>
-
-         <div class="member">
-            <div class="member_img">
-              <img src="images/team/2019-20/member8.jpg">
-               <div class="social_media">
-               <a href="https://www.linkedin.com/in/gagan-j-50b6aa134/"><i class="fa fa-linkedin"></i></a>
-             </div>
-           </div>
-           <h3>JH Gagan</h3>
-           <h5>Research Head</h5>
-       </div>
-
-         <div class="member">
-            <div class="member_img">
-              <img src="images/team/2019-20/member9.jpg">
-               <div class="social_media">
-               <a href="https://www.linkedin.com/in/ammaralam221/"><i class="fa fa-linkedin"></i></a>
-             </div>
-           </div>
-            <h3>Ammar Alam Malik</h3>
-           <h5>Advisory Board</h5>
-       </div>
-
-       <div class="member">
-            <div class="member_img">
-              <img src="images/team/2019-20/member10.jpg">
-               <div class="social_media">
-               <a href="https://www.linkedin.com/company/robotics-and-circuits"><i class="fa fa-linkedin"></i></a>
-             </div>
-           </div>
-           <h3>Tanyeem Saifi</h3>
-           <h5>Advisory Board</h5>
-       </div>
-
-         <div class="member">
-            <div class="member_img">
-              <img src="images/team/2019-20/member11.jpg">
-               <div class="social_media">
-               <a href="https://www.linkedin.com/in/vishnu-bhargav-82b419175/"><i class="fa fa-linkedin"></i></a>
-             </div>
-           </div>
-           <h3>Vishnu Bharghav</h3>
-           <h5>Advisory Board</h5>
-       </div>
- </section>
- <!-- End Board-->
 
 
 <!--start footer-->
