--- a/project_gallery.html
+++ b/project_gallery.html
@@ -27,6 +27,7 @@
           <li><a href="index.html#about_us">About Us</a></li>
           <li><a href="index.html#our_work">Our Work</a></li>
           <li><a href="team.html">Team</a></li>
+          <li><a href="alumni.html">Alumni</a></li>
           <li><a href="vedanthcs.html" >Vedanth</a></li>
           <li><a href="project_gallery.html" class="active">Projects </a></li>
           <li><a href="index.html#contact">Contact Us</a></li>
