--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <link rel="icon" href="images/logo/hlogo.png" type="image">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+  <style>
+    
+  </style>
  </head>
 
 <body>
@@ -27,12 +30,17 @@
   <div class="navbar">
         <ul>
           <li><a href="#home" class="active">Home</a></li>
-          <li><a href="#ongoing">Ongoing Activities</a></li>
           <li><a href="#about_us">About Us</a></li>
           <li><a href="#our_work">Our Work</a></li>
-          <li><a href="team.html">Team</a></li>
-          <li><a href="alumni.html">Alumni</a></li>
+          <li><a href="#ongoing">Ongoing Activities</a></li>
           <li><a href="vedanthcs.html">Vedanth</a></li>
+          <li class="dropdown">
+            <a href="#team">Team</a>
+            <div class="dropdown-content">
+              <a href="team.html">2023</a>
+              <a href="alumni.html">Alumni</a>
+            </div>
+          </li>
           <li><a href="project_gallery.html">Projects</a></li>
           <li><a href="#contact">Contact Us</a></li>
         </ul>
@@ -215,6 +223,12 @@ class="activities">
     <div class="activitiescontent">
         <div class="box">
           <ul>
+            <li>Technoxian 2023</li>
+            <!-- Attach video link -->
+            <li>Virtual RobotX Competition 2023</li>
+            <!-- Round1 video link -->
+            <!-- Round2 video link -->
+            
             <!---
             <li>Virtual RobotX Competition VRX2022 Final Round</li>
             <p><a href="https://youtu.be/cZdb9_lSOd4">Introduction Video</a></p>
@@ -223,8 +237,8 @@ class="activities">
             -->
             <!--<li>Vedanth 12.0 coming soon</li>
             <p><a href="https://forms.gle/TVpRymgaJryCaQna9">Registration Link</a></p>-->
-            <li>RnC Recruitment 2023</li>
-            <p><a href="https://forms.office.com/r/bK893BUwbB">Registration Link</a></p>
+            <!-- <li>RnC Recruitment 2023</li>
+            <p><a href="https://forms.office.com/r/bK893BUwbB">Registration Link</a></p> -->
           </ul>
         </div>
      </div>
