--- a/project_gallery.html
+++ b/project_gallery.html
@@ -21,17 +21,21 @@
     <i class="fa fa-bars" aria-hidden="true"></i>
   <div>
   <div class="navbar">
-        <ul>
-          <li><a href="index.html#home">Home</a></li>
-           <li><a href="index.html#ongoing">Ongoing Activities</a></li>
-          <li><a href="index.html#about_us">About Us</a></li>
-          <li><a href="index.html#our_work">Our Work</a></li>
-          <li><a href="team.html">Team</a></li>
-          <li><a href="alumni.html">Alumni</a></li>
-          <li><a href="vedanthcs.html" >Vedanth</a></li>
-          <li><a href="project_gallery.html" class="active">Projects </a></li>
-          <li><a href="index.html#contact">Contact Us</a></li>
-        </ul>
+    <ul>
+        <li><a href="index.html#about_us">About Us</a></li>
+        <li><a href="index.html#our_work">Our Work</a></li>
+        <li><a href="index.html#ongoing">Ongoing Activities</a></li>
+        <li><a href="vedanthcs.html" >Vedanth</a></li>
+        <li class="dropdown">
+          <a href="#team">Team</a>
+          <div class="dropdown-content">
+            <a href="team.html">2023</a>
+            <a href="alumni.html">Alumni</a>
+          </div>
+        </li>
+        <li><a href="project_gallery.html" class="active">Projects </a></li>
+        <li><a href="index.html#contact">Contact Us</a></li>
+    </ul>
    </div>
   </div>
  </div>
