Added new recruits

--- a/team.html
+++ b/team.html
@@ -152,15 +152,14 @@
             <li>Yashika Goyal</li>
             <li>Jason Dmello</li>
             <li>Nilay Nishant</li>
-            <li>Priyasu Karak</li>
-            <li>Punith</li>
-            <li>Ananya Das</li>
             <li>Soham Ghodke</li>
             <li>Anirudh Agrawal</li>
             <li>Aman Agarwal</li>
             <li>Aditya Wadgaonkar</li>
             <li>Rishabh Singh</li>
             <li>Gnana Sai</li>
+            <li>Tanay Srivastava</li>
+            <li>Sujan Adiga</li>
        </ul>
       </div>
 
@@ -173,13 +172,16 @@
             <li>Kashin Mittal</li>
             <li>Poonguzhali Sivakumar</li>
             <li>Urvi Todi</li>
+            <li>Prajwal Vakare</li>
+            <li>Mohal Sarthak</li>
+            <li>Akshay Prabhu</li>
        </ul>
       </div>
 
       <div class="domains">
        <h5>Mechanical</h5>
        <ul>
-            <li>Somya Nalwaya</li>
+            <li>Sarthak Satpal</li>
        </ul>
       </div>
 
@@ -187,6 +189,7 @@
        <h5>Management</h5>
        <ul>
             <li>Disha Gupta</li>
+            <li>Isha Uttam</li>
       </ul>
       </div>
 
