Made a few changes for names

--- a/alumni.html
+++ b/alumni.html
@@ -29,7 +29,7 @@
       <li class="dropdown">
         <a class="active" href="#team">Team</a>
         <div class="dropdown-content">
-          <a href="team.html">2023</a>
+          <a href="team.html">2024</a>
           <a href="alumni.html">Alumni</a>
         </div>
       </li>
@@ -60,6 +60,72 @@
 
 
 <!-- BOARD -->
+
+<!--START BOARD 2022-->>
+<section class="board">
+  <div class="title textcenter">
+    <h1>Board 2023</h1>
+  </div>
+        <div class="member">
+          <div class="member_img">
+              <img src="images/team/2022-23/chaitanya.png"  style="object-fit: cover;">
+              <div class="social_media">
+              <a href=""><i class="fa fa-linkedin"></i></a>
+              </div>
+          </div>
+          <h3>
+            R. CHAITANYA SAI NIKITH
+          </h3>
+          <h5>Team Leader</h5>
+        </div>
+
+        <div class="member">
+          <div class="member_img">
+              <img src="images/team/2022-23/siddhartha.jpeg">
+              <div class="social_media">
+              <a href="https://www.linkedin.com/in/siddhartha-bhat-9236b11b6/"><i class="fa fa-linkedin"></i></a>
+            </div>
+          </div>
+          <h3>Siddhartha Bhat</h3>
+          <h5>Technical Head</h5>
+        </div>
+</section>
+
+<section class="board">
+        <div class="member">
+          <div class="member_img">
+              <img src="images/team/2022-23/disha.jpg" style="object-fit: cover;">
+              <div class="social_media">
+              <a href="https://www.linkedin.com/in/disha-ag-1b71651b1"><i class="fa fa-linkedin"></i></a>
+            </div>
+          </div>
+          <h3>Nilay Nishant</h3>
+          <h5>Coding & Simulations Head</h5>
+        </div>
+
+        <div class="member">
+          <div class="member_img">
+              <img src="images/team/2022-23/ayush.png" style="object-fit: cover;">
+              <div class="social_media">
+              <a href="https://www.linkedin.com/in/ayush-sarkar-851946227"><i class="fa fa-linkedin"></i></a>
+            </div>
+          </div>
+          <h3>Ayush Sarkar</h3>
+          <h5>Mechanical Head</h5>
+        </div>
+
+        <div class="member">
+          <div class="member_img">
+              <img src="images/team/2022-23/ahona.png" style="object-fit: cover;">
+              <div class="social_media">
+              <a href="https://www.linkedin.com/in/ahona-rakshit-a9340b252"><i class="fa fa-linkedin"></i></a>
+            </div>
+          </div>
+          <h3>Ahona Rakshit</h3>
+          <h5>Electronics Head</h5>
+        </div>
+</section>
+
 
 <!-- START BOARD 2021-->
 <section class="board">
