--- a/team.html
+++ b/team.html
@@ -29,7 +29,7 @@
         <li class="dropdown">
           <a href="#team" class="active">Team</a>
           <div class="dropdown-content">
-            <a href="team.html">2023</a>
+            <a href="team.html">2024</a>
             <a href="alumni.html">Alumni</a>
           </div>
         </li>
@@ -69,7 +69,10 @@
               <a href=""><i class="fa fa-linkedin"></i></a>
               </div>
           </div>
-          <h3>R. Chaitanya Sai Nikith</h3>
+          <h3>Ayush</h3>
+          <h3>
+            Sarkar
+          </h3>
           <h5>Team Leader</h5>
         </div>
 
@@ -80,8 +83,8 @@
               <a href="https://www.linkedin.com/in/siddhartha-bhat-9236b11b6/"><i class="fa fa-linkedin"></i></a>
             </div>
           </div>
-          <h3>Siddhartha Bhat</h3>
-          <h5>Project Manager</h5>
+          <h3>Ahona Rakshit</h3>
+          <h5>Technical Head</h5>
         </div>
 </section>
 
@@ -93,8 +96,8 @@
               <a href="https://www.linkedin.com/in/disha-ag-1b71651b1"><i class="fa fa-linkedin"></i></a>
             </div>
           </div>
-          <h3>Disha Agarwal</h3>
-          <h5>Coding Head</h5>
+          <h3>Nilay Nishant</h3>
+          <h5>Coding & Simulations Head</h5>
         </div>
 
         <div class="member">
@@ -115,20 +118,11 @@
               <a href="https://www.linkedin.com/in/ahona-rakshit-a9340b252"><i class="fa fa-linkedin"></i></a>
             </div>
           </div>
-          <h3>Ahona Rakshit</h3>
+          <h3>Poonguzhali Sivakumar</h3>
           <h5>Electronics Head</h5>
         </div>
 
-        <div class="member">
-          <div class="member_img">
-              <img src="images/team/2022-23/kishika.png">
-              <div class="social_media">
-              <a href="http://linkedin.com/in/kishika-singh-a54651258/"><i class="fa fa-linkedin"></i></a>
-            </div>
-          </div>
-          <h3>Kishika Singh</h3>
-          <h5>Simulations Head</h5>
-        </div>
+        
 </section>
 <!-- END BOARD 2023-->
 
