few another changes

--- a/team.html
+++ b/team.html
@@ -83,7 +83,8 @@
               <a href="https://www.linkedin.com/in/siddhartha-bhat-9236b11b6/"><i class="fa fa-linkedin"></i></a>
             </div>
           </div>
-          <h3>Ahona Rakshit</h3>
+          <h3>Ahona</h3>
+          <h3>Rakshit</h3>
           <h5>Technical Head</h5>
         </div>
 </section>
@@ -96,7 +97,7 @@
               <a href="https://www.linkedin.com/in/disha-ag-1b71651b1"><i class="fa fa-linkedin"></i></a>
             </div>
           </div>
-          <h3>Nilay Nishant</h3>
+          <h3>Nilay </h3><h3>Nishant</h3>
           <h5>Coding & Simulations Head</h5>
         </div>
 
@@ -107,8 +108,8 @@
               <a href="https://www.linkedin.com/in/ayush-sarkar-851946227"><i class="fa fa-linkedin"></i></a>
             </div>
           </div>
-          <h3>Ayush Sarkar</h3>
-          <h5>Mechanical Head</h5>
+          <h3>Isha</h3> <h3>Uttam</h3>
+          <h5>Management Head</h5>
         </div>
 
         <div class="member">
@@ -118,7 +119,7 @@
               <a href="https://www.linkedin.com/in/ahona-rakshit-a9340b252"><i class="fa fa-linkedin"></i></a>
             </div>
           </div>
-          <h3>Poonguzhali Sivakumar</h3>
+          <h3>Poonguzhali</h3><h3>Sivakumar</h3>
           <h5>Electronics Head</h5>
         </div>
 
@@ -132,13 +133,6 @@
   </div>
   <div class="row">
     <div class="teamcontent">
-      <div class="domains" >
-        <h5>Senior Team Members</h5>
-         <ul>
-            <li>Dev S  Sakaria</li>
-            <li>Suryansh Sunil</li>
-         </ul>
-    </div>
 
     <div class="domains" >
        <h5>Coding & Simulation</h5>
