--- a/team.html
+++ b/team.html
@@ -1,148 +1,150 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Robotics And Circuits</title>
-    <link rel="icon" href="images/logo/hlogo.png" type="image">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/style2.css">
-    <link rel="stylesheet" href="css/responsive.css">
-  </head>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Robotics And Circuits</title>
+  <link rel="icon" href="images/logo/hlogo.png" type="image">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style2.css">
+  <link rel="stylesheet" href="css/responsive.css">
+</head>
 
 <body>
 
-<!--start header-->
-<header>
- <div class="container">
- <div class="row">
-    <img src="images/logo/hlogo.png">
-  <div class="ham-burger">
-    <i class="fa fa-bars" aria-hidden="true"></i>
-  </div>
-  <div class="navbar">
-      <ul>
-        <li><a href="index.html#about_us">About Us</a></li>
-        <li><a href="index.html#our_work">Our Work</a></li>
-        <li><a href="index.html#ongoing">Ongoing Activities</a></li>
-        <li><a href="vedanthcs.html" >Vedanth</a></li>
-        <li class="dropdown">
-          <a href="#team" class="active">Team</a>
-          <div class="dropdown-content">
-            <a href="team.html">2024</a>
-            <a href="alumni.html">Alumni</a>
-          </div>
-        </li>
-        <li><a href="project_gallery.html">Projects </a></li>
-        <li><a href="index.html#contact">Contact Us</a></li>
-      </ul>
-   </div>
-  </div>
- </div>
-</header>
-<!--end header-->
-
-
-<!--start blog title-->
-<section class="heading">
-  <div class="container">
-    <div class="row">
-      <div class="headingcontent">
-       <div class="block">
-        <h1>Meet Our Team</h1>
+  <!--start header-->
+  <header>
+    <div class="container">
+      <div class="row">
+        <a href="index.html"><img src="images/logo/hlogo.png"></a>
+        <div class="ham-burger">
+          <i class="fa fa-bars" aria-hidden="true"></i>
+        </div>
+        <div class="navbar">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html#about_us">About Us</a></li>
+            <li><a href="index.html#our_work">Our Work</a></li>
+            <li><a href="index.html#ongoing">Ongoing Activities</a></li>
+            <li><a href="vedanthcs.html">Vedanth</a></li>
+            <li class="dropdown">
+              <a href="#team" class="active">Team</a>
+              <div class="dropdown-content">
+                <a href="team.html">2024</a>
+                <a href="alumni.html">Alumni</a>
+              </div>
+            </li>
+            <li><a href="project_gallery.html">Projects </a></li>
+            <li><a href="index.html#contact">Contact Us</a></li>
+          </ul>
+        </div>
       </div>
     </div>
-  </div>
-</div>
-</section>
-<!--end blog title-->
+  </header>
+  <!--end header-->
 
-<!-- START BOARD 2023 -->
-<section class="board">
-  <div class="title textcenter">
-    <h1>Board</h1>
-  </div>
-        <div class="member">
-          <div class="member_img">
-              <img src="images/team/2022-23/chaitanya.png"  style="object-fit: cover;">
-              <div class="social_media">
-              <a href=""><i class="fa fa-linkedin"></i></a>
-              </div>
+
+  <!--start blog title-->
+  <section class="heading">
+    <div class="container">
+      <div class="row">
+        <div class="headingcontent">
+          <div class="block">
+            <h1>Meet Our Team</h1>
           </div>
-          <h3>Ayush</h3>
-          <h3>
-            Sarkar
-          </h3>
-          <h5>Team Leader</h5>
         </div>
+      </div>
+    </div>
+  </section>
+  <!--end blog title-->
 
-        <div class="member">
-          <div class="member_img">
-              <img src="images/team/2022-23/siddhartha.jpeg">
-              <div class="social_media">
-              <a href="https://www.linkedin.com/in/siddhartha-bhat-9236b11b6/"><i class="fa fa-linkedin"></i></a>
-            </div>
-          </div>
-          <h3>Ahona Rakshit</h3>
-          <h5>Technical Head</h5>
+  <!-- START BOARD 2023 -->
+  <section class="board">
+    <div class="title textcenter">
+      <h1>Board</h1>
+    </div>
+    <div class="member">
+      <div class="member_img">
+        <img src="images/team/2022-23/chaitanya.png" style="object-fit: cover;">
+        <div class="social_media">
+          <a href=""><i class="fa fa-linkedin"></i></a>
         </div>
-</section>
-
-<section class="board">
-        <div class="member">
-          <div class="member_img">
-              <img src="images/team/2022-23/disha.jpg" style="object-fit: cover;">
-              <div class="social_media">
-              <a href="https://www.linkedin.com/in/disha-ag-1b71651b1"><i class="fa fa-linkedin"></i></a>
-            </div>
-          </div>
-          <h3>Nilay Nishant</h3>
-          <h5>Coding & Simulations Head</h5>
-        </div>
-
-        <div class="member">
-          <div class="member_img">
-              <img src="images/team/2022-23/ayush.png" style="object-fit: cover;">
-              <div class="social_media">
-              <a href="https://www.linkedin.com/in/ayush-sarkar-851946227"><i class="fa fa-linkedin"></i></a>
-            </div>
-          </div>
-          <h3>Ayush Sarkar</h3>
-          <h5>Mechanical Head</h5>
-        </div>
-
-        <div class="member">
-          <div class="member_img">
-              <img src="images/team/2022-23/ahona.png" style="object-fit: cover;">
-              <div class="social_media">
-              <a href="https://www.linkedin.com/in/ahona-rakshit-a9340b252"><i class="fa fa-linkedin"></i></a>
-            </div>
-          </div>
-          <h3>Poonguzhali Sivakumar</h3>
-          <h5>Electronics Head</h5>
-        </div>
-
-        
-</section>
-<!-- END BOARD 2023-->
-
-<section class="others">
- <div class="title textcenter">
-   <h1>Team Members</h1>
-  </div>
-  <div class="row">
-    <div class="teamcontent">
-      <div class="domains" >
-        <h5>Senior Team Members</h5>
-         <ul>
-            <li>Dev S  Sakaria</li>
-            <li>Suryansh Sunil</li>
-         </ul>
+      </div>
+      <h3>Ayush</h3>
+      <h3>
+        Sarkar
+      </h3>
+      <h5>Team Leader</h5>
     </div>
 
-    <div class="domains" >
-       <h5>Coding & Simulation</h5>
-       <ul>
+    <div class="member">
+      <div class="member_img">
+        <img src="images/team/2022-23/siddhartha.jpeg">
+        <div class="social_media">
+          <a href="https://www.linkedin.com/in/siddhartha-bhat-9236b11b6/"><i class="fa fa-linkedin"></i></a>
+        </div>
+      </div>
+      <h3>Ahona Rakshit</h3>
+      <h5>Technical Head</h5>
+    </div>
+  </section>
+
+  <section class="board">
+    <div class="member">
+      <div class="member_img">
+        <img src="images/team/2022-23/disha.jpg" style="object-fit: cover;">
+        <div class="social_media">
+          <a href="https://www.linkedin.com/in/disha-ag-1b71651b1"><i class="fa fa-linkedin"></i></a>
+        </div>
+      </div>
+      <h3>Nilay Nishant</h3>
+      <h5>Coding & Simulations Head</h5>
+    </div>
+
+    <div class="member">
+      <div class="member_img">
+        <img src="images/team/2022-23/ayush.png" style="object-fit: cover;">
+        <div class="social_media">
+          <a href="https://www.linkedin.com/in/ayush-sarkar-851946227"><i class="fa fa-linkedin"></i></a>
+        </div>
+      </div>
+      <h3>Ayush Sarkar</h3>
+      <h5>Mechanical Head</h5>
+    </div>
+
+    <div class="member">
+      <div class="member_img">
+        <img src="images/team/2022-23/ahona.png" style="object-fit: cover;">
+        <div class="social_media">
+          <a href="https://www.linkedin.com/in/ahona-rakshit-a9340b252"><i class="fa fa-linkedin"></i></a>
+        </div>
+      </div>
+      <h3>Poonguzhali Sivakumar</h3>
+      <h5>Electronics Head</h5>
+    </div>
+
+
+  </section>
+  <!-- END BOARD 2023-->
+
+  <section class="others">
+    <div class="title textcenter">
+      <h1>Team Members</h1>
+    </div>
+    <div class="row">
+      <div class="teamcontent">
+        <div class="domains">
+          <h5>Senior Team Members</h5>
+          <ul>
+            <li>Dev S Sakaria</li>
+            <li>Suryansh Sunil</li>
+          </ul>
+        </div>
+
+        <div class="domains">
+          <h5>Coding & Simulation</h5>
+          <ul>
             <li>Yashika Goyal</li>
             <li>Jason Dmello</li>
             <li>Nilay Nishant</li>
@@ -154,12 +156,12 @@
             <li>Gnana Sai</li>
             <li>Tanay Srivastava</li>
             <li>Sujan Adiga</li>
-       </ul>
-      </div>
+          </ul>
+        </div>
 
-      <div class="domains" >  
-       <h5>Electronics</h5>
-       <ul>
+        <div class="domains">
+          <h5>Electronics</h5>
+          <ul>
             <li>Harshitha Ashok</li>
             <li>Avyaktha Thantry</li>
             <li>Purbasha Rauth</li>
@@ -169,58 +171,62 @@
             <li>Prajwal Vakare</li>
             <li>Mohal Sarthak</li>
             <li>Akshay Prabhu</li>
-       </ul>
-      </div>
+          </ul>
+        </div>
 
-      <div class="domains">
-       <h5>Mechanical</h5>
-       <ul>
+        <div class="domains">
+          <h5>Mechanical</h5>
+          <ul>
             <li>Sarthak Satpal</li>
-       </ul>
-      </div>
+          </ul>
+        </div>
 
-      <div class="domains">
-       <h5>Management</h5>
-       <ul>
+        <div class="domains">
+          <h5>Management</h5>
+          <ul>
             <li>Disha Gupta</li>
             <li>Isha Uttam</li>
-      </ul>
+          </ul>
+        </div>
+
       </div>
+    </div>
 
-   </div>
- </div>
-
-</section>
+  </section>
 
 
-<!--start footer-->
-<footer>
-<div class="container">
- <div class="row">
-  <div class="logo">
-    <img src="images/logo/flogo.png" height=70px>
+  <!--start footer-->
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="logo">
+          <img src="images/logo/flogo.png" height=70px>
+        </div>
+      </div>
+      <div class="row">
+        <div class="social">
+          <a class="sm_icons" href="https://www.facebook.com/RnCmanipal/"> <i class="fa fa-facebook"></i></a>
+          <a class="sm_icons" href="https://www.instagram.com/robotics_and_circuits/"> <i
+              class="fa fa-instagram"></i></a>
+          <a class="sm_icons" href="https://www.linkedin.com/company/robotics-and-circuits"><i
+              class="fa fa-linkedin"></i></a>
+          <a class="sm_icons" href="https://github.com/RNCManipal"><i class="fa fa-github"></i></a>
+        </div>
+      </div>
+      <p>&copy; 2021 Robotics and Circuits</p>
+  </footer>
+
+  <div class="mahe">
+    <p>supported by</p>
+    <img src="images/logo/mahe-logo.png" height=50px>
   </div>
-</div>
-<div class="row">
-  <div class="social">
-    <a class="sm_icons" href="https://www.facebook.com/RnCmanipal/"> <i class="fa fa-facebook"></i></a>
-    <a  class="sm_icons" href="https://www.instagram.com/robotics_and_circuits/"> <i class="fa fa-instagram"></i></a>
-    <a class="sm_icons" href="https://www.linkedin.com/company/robotics-and-circuits"><i class="fa fa-linkedin"></i></a>
-    <a class="sm_icons" href="https://github.com/RNCManipal"><i class="fa fa-github"></i></a>
-  </div>
-</div>
-  <p>&copy; 2021 Robotics and Circuits</p>
-</footer>
 
-<div class="mahe"><p>supported by</p>
- <img src="images/logo/mahe-logo.png" height=50px>
-</div>
-
-<section class="name">
+  <section class="name">
     <p>Crafted with <i class="fa fa-heart" aria-hidden="true"></i> by Titiksha Wagh</p>
-</section>
-<!--end footer-->
+  </section>
+  <!--end footer-->
 
-<script src="js/script.js"></script>
+  <script src="js/script.js"></script>
 </body>
+
 </html>
