--- a/team.html
+++ b/team.html
@@ -57,7 +57,7 @@
 </section>
 <!--end blog title-->
 
-<!-- START BOARD 2023 -->
+<!-- START BOARD 2024 -->
 <section class="board">
   <div class="title textcenter">
     <h1>Board</h1>
@@ -86,6 +86,20 @@
           <h3>Ahona</h3>
           <h3>Rakshit</h3>
           <h5>Technical Head</h5>
+        </div>
+
+        <div class="member">
+          <div class="member_img">
+              <img src="images/team/2022-23/chaitanya.png"  style="object-fit: cover;">
+              <div class="social_media">
+              <a href=""><i class="fa fa-linkedin"></i></a>
+              </div>
+          </div>
+          <h3>Disha</h3>
+          <h3>
+            Gupta
+          </h3>
+          <h5>Team Manager</h5>
         </div>
 </section>
 
@@ -127,6 +141,92 @@
 </section>
 <!-- END BOARD 2023-->
 
+<!--Advisory BOARD 2024-->>
+<section class="board">
+  <div class="title textcenter">
+    <h1>ADVISORY BOARD</h1>
+  </div>
+        <div class="member">
+          <div class="member_img">
+              <img src="images/team/2022-23/chaitanya.png"  style="object-fit: cover;">
+              <div class="social_media">
+              <a href=""><i class="fa fa-linkedin"></i></a>
+              </div>
+          </div>
+          <h3>Ayush</h3>
+          <h3>
+            Sarkar
+          </h3>
+          <h5>Team Leader</h5>
+        </div>
+
+        <div class="member">
+          <div class="member_img">
+              <img src="images/team/2022-23/siddhartha.jpeg">
+              <div class="social_media">
+              <a href="https://www.linkedin.com/in/siddhartha-bhat-9236b11b6/"><i class="fa fa-linkedin"></i></a>
+            </div>
+          </div>
+          <h3>Ahona</h3>
+          <h3>Rakshit</h3>
+          <h5>Technical Head</h5>
+        </div>
+
+        <div class="member">
+          <div class="member_img">
+              <img src="images/team/2022-23/chaitanya.png"  style="object-fit: cover;">
+              <div class="social_media">
+              <a href=""><i class="fa fa-linkedin"></i></a>
+              </div>
+          </div>
+          <h3>Disha</h3>
+          <h3>
+            Gupta
+          </h3>
+          <h5>Team Manager</h5>
+        </div>
+</section>
+
+<section class="board">
+        <div class="member">
+          <div class="member_img">
+              <img src="images/team/2022-23/disha.jpg" style="object-fit: cover;">
+              <div class="social_media">
+              <a href="https://www.linkedin.com/in/disha-ag-1b71651b1"><i class="fa fa-linkedin"></i></a>
+            </div>
+          </div>
+          <h3>Nilay </h3><h3>Nishant</h3>
+          <h5>Coding & Simulations Head</h5>
+        </div>
+
+        <div class="member">
+          <div class="member_img">
+              <img src="images/team/2022-23/ayush.png" style="object-fit: cover;">
+              <div class="social_media">
+              <a href="https://www.linkedin.com/in/ayush-sarkar-851946227"><i class="fa fa-linkedin"></i></a>
+            </div>
+          </div>
+          <h3>Isha</h3> <h3>Uttam</h3>
+          <h5>Management Head</h5>
+        </div>
+
+        <div class="member">
+          <div class="member_img">
+              <img src="images/team/2022-23/ahona.png" style="object-fit: cover;">
+              <div class="social_media">
+              <a href="https://www.linkedin.com/in/ahona-rakshit-a9340b252"><i class="fa fa-linkedin"></i></a>
+            </div>
+          </div>
+          <h3>Poonguzhali</h3><h3>Sivakumar</h3>
+          <h5>Electronics Head</h5>
+        </div>
+
+        
+</section>
+
+
+<!--END ADVISORY BOARD-->>
+
 <section class="others">
  <div class="title textcenter">
    <h1>Team Members</h1>
@@ -139,7 +239,6 @@
        <ul>
             <li>Yashika Goyal</li>
             <li>Jason Dmello</li>
-            <li>Nilay Nishant</li>
             <li>Soham Ghodke</li>
             <li>Anirudh Agrawal</li>
             <li>Aman Agarwal</li>
@@ -158,9 +257,10 @@
             <li>Avyaktha Thantry</li>
             <li>Purbasha Rauth</li>
             <li>Kashin Mittal</li>
-            <li>Poonguzhali Sivakumar</li>
             <li>Urvi Todi</li>
-            <li>Prajwal Vakare</li>
+            <li>Daya Sagar A.J</li>
+            <li>Pradyumna Rao</li>
+            <li>Mudit Agarwal</li>
             <li>Mohal Sarthak</li>
             <li>Akshay Prabhu</li>
        </ul>
@@ -176,8 +276,7 @@
       <div class="domains">
        <h5>Management</h5>
        <ul>
-            <li>Disha Gupta</li>
-            <li>Isha Uttam</li>
+            <li>Thara Anil</li>
       </ul>
       </div>
 
@@ -203,7 +302,7 @@
     <a class="sm_icons" href="https://github.com/RNCManipal"><i class="fa fa-github"></i></a>
   </div>
 </div>
-  <p>&copy; 2021 Robotics and Circuits</p>
+  <p>&copy; 2024 Robotics and Circuits</p>
 </footer>
 
 <div class="mahe"><p>supported by</p>
