--- a/team.html
+++ b/team.html
@@ -153,42 +153,39 @@
     </div>
     <div class="member">
       <div class="member_img">
-        <img src="images/team/2022-23/chaitanya.png" style="object-fit: cover;">
+        <img src="images/team/2023-24/Kishika.jpg" style="object-fit: cover;">
         <div class="social_media">
-          <a href=""><i class="fa fa-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/kishika-singh"><i class="fa fa-linkedin"></i></a>
         </div>
       </div>
-      <h3>Ayush</h3>
+      <h3>Kishika</h3>
       <h3>
-        Sarkar
+        Singh
       </h3>
-      <h5>Team Leader</h5>
     </div>
 
     <div class="member">
       <div class="member_img">
-        <img src="images/team/2022-23/siddhartha.jpeg">
+        <img src="images/team/2023-24/Harshitha.jpg">
         <div class="social_media">
-          <a href="https://www.linkedin.com/in/siddhartha-bhat-9236b11b6/"><i class="fa fa-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/harshitha-ashok-596924253/"><i class="fa fa-linkedin"></i></a>
         </div>
       </div>
-      <h3>Ahona</h3>
-      <h3>Rakshit</h3>
-      <h5>Technical Head</h5>
+      <h3>Harshitha</h3>
+      <h3>Ashok</h3>
     </div>
 
     <div class="member">
       <div class="member_img">
-        <img src="images/team/2022-23/chaitanya.png" style="object-fit: cover;">
+        <img src="images/team/2023-24/Kashin.jpg" style="object-fit: cover;">
         <div class="social_media">
-          <a href=""><i class="fa fa-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/kashin-mittal-342bb621a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"><i class="fa fa-linkedin"></i></a>
         </div>
       </div>
-      <h3>Disha</h3>
+      <h3>Kashin</h3>
       <h3>
-        Gupta
+        Mittal
       </h3>
-      <h5>Team Manager</h5>
     </div>
   </section>
 
